--- a/theblog/templates/detele_post.html
+++ b/theblog/templates/detele_post.html
@@ -11,7 +11,7 @@
         <div class="form-group">
             <form method="POST" action="">
                 {% csrf_token %}
-                <strong>Are you sure?!</strong></form><br/><br/>
+                <strong>Are you sure?!</strong><br/><br/>
                 <button class="btn btn-secondary">Delete</button>
         </div>
     {% else %}
