--- a/members/templates/registration/create_user_profile_page.html
+++ b/members/templates/registration/create_user_profile_page.html
@@ -1,16 +1,15 @@
 {% extends 'base.html' %}
-{% block title %}Create a New Blog Post!{% endblock %} 
+{% block title %}Create a New Profile Page{% endblock %} 
 {% block content %}
 
 {% if user.is_authenticated %}
-    <h1>Add Post...</h1>
+    <h1>Create Profile Page...</h1>
     <br/><br/>
     <div class="form-group">
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
-            {{ form.media }}
             {{ form.as_p }}
-            <button class="btn btn-secondary">Add Post</button>
+            <button class="btn btn-secondary">Create Profile Page</button>
     </div>
     <script>
         var name = "{{ user.id }}";
