--- a/members/templates/registration/edit_profile.html
+++ b/members/templates/registration/edit_profile.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
-{% block title %}Edit Profile{% endblock %} 
+{% block title %}Edit Setting{% endblock %} 
 {% block content %}
 
-<h1>Edit Profile...</h1>
-<br/><br/>
+<h1>Edit Setting...</h1>
+<br/>
 <div class="form-group">
     <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
-        <button class="btn btn-secondary">Update Profile</button>
+        <button class="btn btn-secondary">Update Setting</button>
 
 </div>
 
