--- a/members/templates/registration/login.html
+++ b/members/templates/registration/login.html
@@ -7,7 +7,19 @@
 <div class="form-group">
     <form method="POST">
         {% csrf_token %}
-        {{ form.as_p }}
+        <form>
+            <div class="form-group">
+              <input type="text" class="form-control col-sm-10" name="username" placeholder="Username">
+            </div>
+
+            <div class="form-group">
+              <input type="password" class="form-control col-sm-10" name="password" placeholder="Password">
+
+            <br/>
+            <p id="emailHelp" class="form-text">Not A User? Sign Up <a href="{% url 'register' %}">Here</a>.</p>
+            </div>
+            <br/>
+        
         <button class="btn btn-secondary">Login</button>
 
 </div>
