--- a/theblog/templates/base.html
+++ b/theblog/templates/base.html
@@ -16,6 +16,7 @@
   </head>
 
   <body>
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="{% url 'home' %}"><strong>My Blog</strong></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,7 +35,7 @@
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 
                 {% for item in cat_menu %}
-                <a class="dropdown-item" href="{% url 'category' item %}">{{ item}}</a>
+                <a class="dropdown-item" href="{% url 'category' item %}">{{ item }}</a>
                 {% endfor %}
                 
               </div>
@@ -55,10 +56,6 @@
               </li>
               
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'edit_profile' %}">Edit Profile</a>
-              </li>
-
-              <li class="nav-item">
                 <a class="nav-link" href="{% url 'logout' %}">Logout</a>
               </li>
               
@@ -74,6 +71,26 @@
             
           </ul>
           
+        {% if user.is_authenticated %}
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ user.first_name }}
+              {{user.last_name }}
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="{% url 'edit_profile' %}">Edit Setting</a>
+              {% if user.profile.id %} 
+                <a class="dropdown-item" href="{% url 'edit_profile_page' user.profile.id %}">Edit Profile Page</a>
+                <a class="dropdown-item" href="{% url 'show_profile_page' user.profile.id %}">Show Profile Page</a>
+              {% else %}
+                <a class="dropdown-item" href="{% url 'create_profile_page' %}">Create Profile Page</a>
+              {% endif %}
+            
+              <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+            </div>
+          </li>
+        </ul>
+        {% endif %} 
         </div>
       </nav>
 
