--- a/members/templates/registration/register.html
+++ b/members/templates/registration/register.html
@@ -2,15 +2,22 @@
 {% block title %}Register{% endblock %} 
 {% block content %}
 
-<h1>Register...</h1>
-<br/>
-<div class="form-group">
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <br/>
-        <button class="btn btn-secondary">Register</button>
-        <br/>
+<br>
+<div class="container">
+    <div class="row">    
+        <div class="col-md-4 mt-3 top;" style="margin:auto;">
+            <h1>Register</h1>
+            <br/>
+            <div class="form-group">
+                <form method="POST">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <br/>
+                    <button class="btn btn-secondary">Register</button>
+                    <br/>
+            </div>     
+        </div>
+    </div>
 </div>
 
 {% endblock %} 
