--- a/members/templates/registration/edit_profile.html
+++ b/members/templates/registration/edit_profile.html
@@ -2,14 +2,19 @@
 {% block title %}Edit Setting{% endblock %} 
 {% block content %}
 
-<h1>Edit Setting...</h1>
-<br/>
-<div class="form-group">
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button class="btn btn-secondary">Update Setting</button>
+<div class="container">
+    <div class="row">
+      <div class="col-md-12 mb-4  mt-3 left  top">
+        <h1>Edit Setting</h1>
+        <br/>
+        <div class="form-group">
+            <form method="POST">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button class="btn btn-secondary">Update Setting</button>
 
+        </div>
+    </div>
 </div>
 
 {% endblock %} 
