--- a/members/templates/registration/password_success.html
+++ b/members/templates/registration/password_success.html
@@ -2,7 +2,12 @@
 {% block title %}Password Updated{% endblock %} 
 {% block content %}
 
-<h2>Your Password Was Changed Successfully...</h2>
-<br/><br/>
+<div class="container">
+    <div class="row">
+      <div class="col-md-12 mb-4  mt-3 left  top">
+        <h2>Your Password Was Changed Successfully...</h2>
+        <br/><br/>
+    </div>
+</div>
 
 {% endblock %} 
