--- a/members/templates/registration/user_profile.html
+++ b/members/templates/registration/user_profile.html
@@ -2,54 +2,55 @@
 {% load static%}
 
 {% block content %}
+<div class="container">
+    <div class="row">
+      <div class="col-md-12 mb-4  mt-3 left  top">
+        <h1>User Profile...</h1>
+        <br/>
+        <div class="card mb-3">
+            <div class="row no-gutters">
+                <div class="col-md-2">
+                    {% if page_user.profile_pic %}
+                        <img src="{{ page_user.profile_pic.url }}" class="card-img" width="200" height="200">
 
-<h1>User Profile...</h1>
-<br/>
-<div class="card mb-3">
-    <div class="row no-gutters">
-      <div class="col-md-2">
-        {% if page_user.profile_pic %}
-            <img src="{{ page_user.profile_pic.url }}" class="card-img" width="200" height="200">
+                    {% else %}
+                        <img src="{% static 'theblog\images\default.png' %}" class="card-img" width="200" height="200">
+                    {% endif %}
+                </div>
+                <div class="col-md-10">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                        {{ page_user.user.first_name}} 
+                        {{ page_user.user.last_name}}
+                        </h5>
 
-        {% else %}
-            <img src="{% static 'theblog\images\default.png' %}" class="card-img" width="200" height="200">
-        {% endif %}
-      </div>
-      <div class="col-md-10">
-        <div class="card-body">
-            <h5 class="card-title">
-            {{ page_user.user.first_name}} 
-            {{ page_user.user.last_name}}
-            </h5>
+                        <p class="small text-muted">
+                            {% if page_user.website_url %}
+                                | <a href="{{ page_user.website_url }}"> Website</a>
+                            {% endif %}
 
-            <p class="small text-muted">
-            
+                            {% if page_user.facebook_url %}
+                            | <a href="{{ page_user.facebook_url }}">Facebook</a>
+                            {% endif %}
+                            
+                            {% if page_user.twitter_url %}
+                                | <a href="{{ page_user.twitter_url }}">Twitter</a> 
+                            {% endif %}
 
-                {% if page_user.website_url %}
-                    | <a href="{{ page_user.website_url }}"> Website</a>
-                {% endif %}
+                            {% if page_user.instagram_url %}
+                                | <a href="{{ page_user.instagram_url }}">Instagram</a>
+                            {% endif %}
 
-                {% if page_user.facebook_url %}
-                   | <a href="{{ page_user.facebook_url }}">Facebook</a>
-                {% endif %}
-                
-                {% if page_user.twitter_url %}
-                    | <a href="{{ page_user.twitter_url }}">Twitter</a> 
-                {% endif %}
+                            {% if page_user.pinterest_url %} 
+                                | <a href="{{ page_user.pinterest_url }}">Pinterest</a></p>
+                            {% endif %}
 
-                {% if page_user.instagram_url %}
-                    | <a href="{{ page_user.instagram_url }}">Instagram</a>
-                {% endif %}
-
-                {% if page_user.pinterest_url %} 
-                    | <a href="{{ page_user.pinterest_url }}">Pinterest</a></p>
-                {% endif %}
-
-            <p class="card-text">{{ page_user.bio }}
-            </p>
+                        <p class="card-text">{{ page_user.bio }}
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-
+</div>
 {% endblock %} 
