--- a/theblog/templates/add_category.html
+++ b/theblog/templates/add_category.html
@@ -2,18 +2,22 @@
 {% block title %}Create a New Blog Category!{% endblock %} 
 {% block content %}
 
-{% if user.is_authenticated %}
-<h1>Add Category...</h1>
-<br/><br/>
-<div class="form-group">
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button class="btn btn-secondary">Add Category</button>
+<div class="container">
+    <div class="row">
+      <div class="col-md-12 mb-4  mt-3 left  top">
+        {% if user.is_authenticated %}
+        <h1>Add Category...</h1>
+        <br/><br/>
+        <div class="form-group">
+            <form method="POST">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button class="btn btn-secondary">Add Category</button>
+        </div>
+        {% else %}
+        You're not allowed here.
+        {% endif %}
+    </div>
 </div>
-
-{% else %}
-You're not allowed here.
-{% endif %}
 
 {% endblock %} 
