--- a/theblog/templates/add_comment.html
+++ b/theblog/templates/add_comment.html
@@ -2,13 +2,18 @@
 {% block title %}Comment on BLog Post{% endblock %} 
 {% block content %}
 
-    <h1>Add Comment...</h1>
-    <br/><br/>
-    <div class="form-group">
-        <form method="POST">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button class="btn btn-secondary">Add Comment</button>
+<div class="container">
+    <div class="row">
+      <div class="col-md-12 mb-4  mt-3 left  top">
+        <h1>Add Comment</h1>
+        <br/><br/>
+        <div class="form-group">
+            <form method="POST">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button class="btn btn-secondary">Add Comment</button>
+        </div>
     </div>
+</div>
 
 {% endblock %} 
