--- a/theblog/templates/categories.html
+++ b/theblog/templates/categories.html
@@ -1,27 +1,32 @@
 {% extends 'base.html' %}
 {% block content %}
 
-{% if category_posts %}
-    <h1>{{ cats }}</h1>
+<div class="container">
+    <div class="row">
+      <div class="col-md-12 mb-4  mt-3 left  top">
+        {% if category_posts %}
+            <h1>{{ cats }}</h1>
 
-    {% for post in category_posts %}
-        <li><a href="{% url 'article-detail' post.pk %}">
-            {{ post.title }}</a> - 
-            - {{ post.category }}
-            - {{ post.author.first_name }} 
-            {{ post.author.last_name }} - 
-            {{ post.post_date}} <small>
+            {% for post in category_posts %}
+                <li><a href="{% url 'article-detail' post.pk %}">
+                    {{ post.title }}</a> - 
+                    - {{ post.category }}
+                    - {{ post.author.first_name }} 
+                    {{ post.author.last_name }} - 
+                    {{ post.post_date}} <small>
 
-                {% if user.is_authenticated %}
-                    - <a href="{% url 'update_post' post.pk %}">(Edit)</a>
-                    <a href="{% url 'delete_post' post.pk %}">(Delete)</a>
-                {% endif %}
-            </small><br/>
-        {{ post.body|slice:":200"|safe }}</li>
-    {% endfor %}
-    
-{% else %}
-    <h2>Sorry, this page does not exist...</h2>
-{% endif %}
+                        {% if user.is_authenticated %}
+                            - <a href="{% url 'update_post' post.pk %}">(Edit)</a>
+                            <a href="{% url 'delete_post' post.pk %}">(Delete)</a>
+                        {% endif %}
+                    </small><br/>
+                {{ post.body|slice:":200"|safe }}</li>
+            {% endfor %}
+            
+        {% else %}
+            <h2>Sorry, this page does not exist...</h2>
+        {% endif %}
+    </div>
+</div>
 
 {% endblock %} 
