--- a/theblog/templates/category_list.html
+++ b/theblog/templates/category_list.html
@@ -1,10 +1,17 @@
 {% extends 'base.html' %}
 {% block title %}Blog Categories{% endblock %} 
-
 {% block content %}
-    <h1>Blog Categories</h1>
-    {% for item in cat_menu_list %}
-        <h4><a class="dropdown-item" href="{% url 'category' item %}">{{ item}}</a></h4>
-    {% endfor %}
-                
+
+<div class="container">
+    <div class="row">
+      <div class="col-md-12 mb-4  mt-3 left  top">
+        <h1>Blog Categories</h1>
+        <br>
+        <ul class="list-group bg-transparent">
+            {% for item in cat_menu_list %}
+            <li class="list-group-item bg-transparent" style="font-family:Lora;border: 1px solid #fff;"><h5><a class="dropdown-item" href="{% url 'category' item %}">{{ item }}</a></h5></li>
+            {% endfor %}
+        </ul>
+    </div>
+</div>           
 {% endblock %} 
